# CarParkAssistant-NUCLEO

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  car_assistant.ioc
Core/Inc/: RTE_Components.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  stm32f7xx_nucleo_bus.h  stm32f7xx_nucleo_conf.h  stm32f7xx_nucleo_errno.h  tim.h
Core/Src/: freertos.c  gpio.c  i2c.c  main.c  stm32f7xx_it.c  stm32f7xx_nucleo_bus.c  tim.c
User/: CMakeLists.txt
User/Adapters/Inc/: motor_mx1508_adapter.h  sensor_vl53l3cx_adapter.h  sensor_vl53l5cx_adapter.h  sensor_vl53lx_adapter.h  servo_mg996r_adapter.h
User/Adapters/Src/: motor_mx1508_adapter.c  sensor_vl53l3cx_adapter.c  sensor_vl53l5cx_adapter.c  sensor_vl53lx_adapter.c  servo_mg996r_adapter.c
User/Devices/Motor/mx1508/: CMakeLists.txt
User/Devices/Motor/mx1508/Inc/: mx1508_motor_api.h
User/Devices/Motor/mx1508/Src/: mx1508_motor_api.c
User/Devices/Sensor/ST/vl53l3cx/: CMakeLists.txt
User/Devices/Sensor/ST/vl53l3cx/Core/Inc/: vl53lx_api_calibration.h  vl53lx_api_core.h  vl53lx_api_debug.h  vl53lx_api_preset_modes.h  vl53lx_core.h  vl53lx_core_support.h  vl53lx_dmax.h  vl53lx_dmax_private_structs.h  vl53lx_dmax_structs.h  vl53lx_error_exceptions.h  vl53lx_hist_algos_gen3.h  vl53lx_hist_algos_gen4.h  vl53lx_hist_char.h  vl53lx_hist_core.h  vl53lx_hist_funcs.h  vl53lx_hist_map.h  vl53lx_hist_private_structs.h  vl53lx_hist_structs.h  vl53lx_ll_def.h  vl53lx_ll_device.h  vl53lx_nvm.h  vl53lx_nvm_debug.h  vl53lx_nvm_map.h  vl53lx_nvm_structs.h  vl53lx_register_funcs.h  vl53lx_register_map.h  vl53lx_register_settings.h  vl53lx_register_structs.h  vl53lx_sigma_estimate.h  vl53lx_silicon_core.h  vl53lx_tuning_parm_defaults.h  vl53lx_wait.h  vl53lx_xtalk.h  vl53lx_xtalk_private_structs.h
User/Devices/Sensor/ST/vl53l3cx/Core/Src/: vl53lx_api.c  vl53lx_api_calibration.c  vl53lx_api_core.c  vl53lx_api_debug.c  vl53lx_api_preset_modes.c  vl53lx_core.c  vl53lx_core_support.c  vl53lx_dmax.c  vl53lx_hist_algos_gen3.c  vl53lx_hist_algos_gen4.c  vl53lx_hist_char.c  vl53lx_hist_core.c  vl53lx_hist_funcs.c  vl53lx_nvm.c  vl53lx_nvm_debug.c  vl53lx_register_funcs.c  vl53lx_sigma_estimate.c  vl53lx_silicon_core.c  vl53lx_wait.c  vl53lx_xtalk.c
User/Devices/Sensor/ST/vl53l3cx/Platform/Inc/: vl53l1_platform_user_config.h  vl53l1_platform_user_defines.h  vl53lx_platform.h  vl53lx_platform_init.h  vl53lx_platform_ipp.h  vl53lx_platform_ipp_imports.h  vl53lx_platform_user_config.h  vl53lx_platform_user_data.h  vl53lx_platform_user_defines.h  vl53lx_types.h
User/Devices/Sensor/ST/vl53l3cx/Platform/Src/: vl53lx_platform.c  vl53lx_platform_init.c  vl53lx_platform_ipp.c  vl53lx_platform_log.c
User/Devices/Sensor/ST/vl53l5cx/: CMakeLists.txt
User/Devices/Sensor/ST/vl53l5cx/Core/Inc/: vl53l5cx_api.h  vl53l5cx_buffers.h
User/Devices/Sensor/ST/vl53l5cx/Core/Src/: vl53l5cx_api.c  vl53l5cx_plugin_xtalk.c
User/Devices/Sensor/ST/vl53l5cx/Platform/Inc/: vl53l5cx_platform.h
User/Devices/Sensor/ST/vl53l5cx/Platform/Src/: vl53l5cx_platform.c
User/Devices/Servo/mg996r/: CMakeLists.txt
User/Devices/Servo/mg996r/Inc/: mg996r_servo_api.h
User/Devices/Servo/mg996r/Src/: mg996r_servo_api.c
User/Interfaces/Inc/: car_interface.h  motor_interface.h  sensor_interface.h  servo_interface.h
User/Interfaces/Src/: car_interface.c  motor_interface.c  sensor_interface.c  servo_interface.c
User/Setup/Inc/: car_setup.h  sensors_setup.h
User/Setup/Src/: car_setup.c  sensors_setup.c
User/Tasks/Inc/: car_control_task.h  park_assist_task.h  sensors_task.h
User/Tasks/Src/: car_control_task.c  park_assist_task.c  sensors_task.c
cmake/stm32cubemx/: CMakeLists.txt
